// Copyright (c) 2023 Cisco Systems, Inc. and its affiliates
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http:www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
option go_package="./;awi";

import "common.proto";
import "network_domain.proto";

message ConnectionRequest {
    ConnectionMetadata metadata = 1;
    NetworkDomainConnectionConfig spec = 2;
}

message ConnectionResponse{
    string connection_id = 1;
    Status status = 4; // Connection provisioning status : IN_PROGRESS, SUCCESS, FAILED
}

message NetworkDomainConnectionConfig {

    Source source = 1;
    Destination destination = 2;
    NetworkPolicySelector networkPolicy = 3;
    SecurityPolicySelector securityPolicy = 4;
    InspectionPolicySelector inspectionPolicy = 5;
    AppConnectionPolicySelector appConnectionPolicy = 6;
    ObservabilityPolicySelector observabilityPolicy = 7;
    CostPolicySelector costPolicy = 8;
    AccessPolicySelector accessPolicy = 9;

    message Source {
        Metadata metadata = 1;
        NetworkDomain networkDomain = 2;
    }

    message Destination {
        Metadata metadata = 1;
        NetworkDomain networkDomain = 2;
    }

    message Metadata {
        string name = 1;
        string description = 2;
    }

    message NetworkDomain {
        Selector selector = 1;
        string accountID = 2;
    }

    message NetworkPolicySelector {
        Selector selector = 1;
    }

    message SecurityPolicySelector {
        Selector selector = 1;
    }

    message ObservabilityPolicySelector {
        Selector selector = 1;
    }

    message CostPolicySelector {
        Selector selector = 1;
    }
    message InspectionPolicySelector {
        Selector selector = 1;
    }
    message AppConnectionPolicySelector {
        Selector selector = 1;
    }
    message AccessPolicySelector {
        Selector selector = 1;
    }

    message Selector {
        MatchName matchName = 1;
        MatchId matchId = 2;
        map<string, string> matchLabels = 3;
        MatchSite matchSite = 4;
    }

    message MatchName {
        string name = 1;
    }

    message MatchId {
        string id = 1;
    }

    message MatchSite {
        string id = 2;
    }
}


message ConnectionMetadata {
    string name = 1;
    string namespace = 2;
    map<string,string> labels = 3;
}

message DisconnectRequest{
    string connection_id = 1;
}

message DisconnectResponse{
    string connection_id = 1;
    string connection_name = 2;
    Status status = 3;
}

message GetConnectionRequest {
    string connection_id = 1;
}

message ListConnectionsRequest {
}
message ListConnectionsResponse {
    repeated ConnectionInformation connections = 1;
    Error  error = 2;
}

message ConnectionStatusRequest {
    string connection_id = 1;
}
message ConnectionStatusResponse {
    Status connection_status =1;
    Error  error = 2;
}

message ConnectionInformation {
    string id = 1;
    ConnectionMetadata metadata = 2;
    NetworkDomainObject source = 3;
    NetworkDomainObject destination = 4;
    NetworkDomainConnectionConfig config = 5;
    Status status = 6;
    string creationTimestamp = 7;
    string modificationTimestamp = 8;
}
