// Copyright (c) 2023 Cisco Systems, Inc. and its affiliates
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http:www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

import "network_policy.proto";
import "common.proto";

option go_package = "./;awi";

service NetworkSLAService {
    rpc CreateNetworkSLA (NetworkSLA) returns (NetworkSLACreateResponse) {}
    rpc DeleteNetworkSLA (NetworkSLADeleteRequest) returns (NetworkSLADeleteResponse) {}
    rpc ListNetworkSLAs (NetworkSLAListReqest) returns (NetworkSLAListResponse) {}
}

message NetworkSLACreateResponse {
    Status status = 1;
}

message NetworkSLADeleteRequest {
    string name = 1;
}

message NetworkSLADeleteResponse {
}

message NetworkSLAListReqest {
    // could be filled with filters in the future
}

message NetworkSLAListResponse {
    repeated NetworkSLA networkSLAs = 1;
}
