// Copyright (c) 2023 Cisco Systems, Inc. and its affiliates
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http:www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
option go_package="./;awi";
/* 

SLA requests would help netops folks do better capacity planning. 
SDWAN network should be robust enough to address all network together or network upgrade is an option. 

When SLA request is soft , error is not returned even if the vendor controller is not able to meet the SLA.
When SLA is a hard request, error is met and connection request is not met. 
*/ 

message Hard_SLA {
    // +kubebuilder:validation:Optional
    uint32 bandwidth = 1;
    // +kubebuilder:validation:Optional
    uint32 jitter = 2;
    // +kubebuilder:validation:Optional
    uint32 latency = 3;
    // +kubebuilder:validation:Optional
    double loss = 4;
}

message Soft_SLA {
    string traffic_profile = 1;
    string priority = 2;
}

message Network_SLA {
    Hard_SLA hard = 1;
    Soft_SLA soft = 2;
}
/*
    Response message specifies 
    1. If the deployment supports SLA at all.
    2. What's the available SLA
    3. Meets SLA request or not. 
    If it's is hard SLA requirement , controller reject the request to create connection. 
*/

message SLAResponse {
    bool supports_hard_network_sla = 1;
    bool supports_soft_network_sla = 2;
    Hard_SLA available_hard_network_sla = 3;
    bool meets_sla = 4;
}